--- a/src/business.html
+++ b/src/business.html
@@ -198,7 +198,7 @@
             class="whatCanWeDo-item__icon"
           />
           <h3 class="whatCanWeDo-item-title">
-            A smarter way to pay.
+            A smarter way to pay
           </h3>
           <p class="whatCanWeDo-item-paragraph">
             We provide a simple way for your customers to spread their payments
