--- a/src/index.html
+++ b/src/index.html
@@ -120,9 +120,9 @@
         </div>
         <div class="forWhomItWorks_wrapper">
           <div class="forWhomItWorks_img_bg">
-            <p class="forWhomItWorks_text">Equal Monthly Instalments.</p>
-            <p class="forWhomItWorks_text">No Hidden Fees.</p>
-            <p class="forWhomItWorks_text">No Interest, Ever.</p>
+            <p class="forWhomItWorks_text">Equal monthly instalments</p>
+            <p class="forWhomItWorks_text">No hidden fees</p>
+            <p class="forWhomItWorks_text">No interest, ever</p>
           </div>
         </div>
       </section>
