--- a/src/business.html
+++ b/src/business.html
@@ -5,7 +5,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./images/favicon/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay I’m a business</title>
     <meta
@@ -104,7 +103,7 @@
     <div class="introduction-wrap block-wap">
       <div class="introduction block-child-wrap">
         <h1 class="introduction-desc">
-          Open your eyes to a<br>smarter way to pay
+          Open your eyes to a<br>smarter way to pay.
         </h1>
       </div>
     </div>
@@ -147,7 +146,7 @@
             class="whatCanWeDo-item__icon"
           />
           <h3 class="whatCanWeDo-item-title">
-            Increase basket size
+            Increase basket size.
           </h3>
           <p class="whatCanWeDo-item-paragraph">
             By offering your customers more time to pay, they’re able to spend
@@ -162,7 +161,7 @@
             class="whatCanWeDo-item__icon"
           />
           <h3 class="whatCanWeDo-item-title">
-            Increase customer loyalty
+            Increase customer loyalty.
           </h3>
           <p class="whatCanWeDo-item-paragraph">
             Convert existing customers and attract new ones by offering the
@@ -178,7 +177,7 @@
             class="whatCanWeDo-item__icon"
           />
           <h3 class="whatCanWeDo-item-title">
-            Provide a risk free, secure solution
+            Provide a risk free, secure solution.
           </h3>
           <p class="whatCanWeDo-item-paragraph">
             We assume all transactional risk, paying you in full the next
@@ -198,7 +197,7 @@
             class="whatCanWeDo-item__icon"
           />
           <h3 class="whatCanWeDo-item-title">
-            A smarter way to pay
+            A smarter way to pay.
           </h3>
           <p class="whatCanWeDo-item-paragraph">
             We provide a simple way for your customers to spread their payments
@@ -213,7 +212,7 @@
             class="whatCanWeDo-item__icon"
           />
           <h3 class="whatCanWeDo-item-title">
-            Open & transparent transactions
+            Open & transparent transactions.
           </h3>
           <p class="whatCanWeDo-item-paragraph">
             We are committed to providing your customers with clarity &
@@ -229,7 +228,7 @@
             class="whatCanWeDo-item__icon"
           />
           <h3 class="whatCanWeDo-item-title">
-            Fulfilling orders, not fantasies
+            Fulfilling orders, not fantasies.
           </h3>
           <p class="whatCanWeDo-item-paragraph">
             Your customers always pay their first instalment at the time of
