--- a/src/contact.html
+++ b/src/contact.html
@@ -5,7 +5,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./images/favicon/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay Contact Us</title>
     <meta name="description" content="Openpay Welcome to a smarter way to pay">
@@ -100,7 +99,7 @@
 
     <section class="hero">
       <div class="block-child-wrap">
-        <h1 class="hero__title">Contact us</h2>
+        <h1 class="hero__title">Contact us.</h1>
       </div>
     </section>
 
@@ -112,7 +111,7 @@
             <div class="contact__img-wrapper">
               <img src="./images/contact/mail.svg" alt="Email Icon" class="contact__img contact__img--mail">
             </div>
-            <h3 class="contact__subtitle contact__subtitle--mail">Email us</h3>
+            <h3 class="contact__subtitle contact__subtitle--mail">Email us.</h3>
             <p class="contact__text">For non-urgent and general help, contact us by email and we’ll get back to you promptly.</p>
             <a href="mailto:sales@myopenpay.co.uk" class="contact__link">sales@myopenpay.co.uk</a>
           </div>
@@ -121,7 +120,7 @@
             <div class="contact__img-wrapper">
               <img src="./images/contact/phone.svg" alt="Phone Icon" class="contact__img">
             </div>
-            <h3 class="contact__subtitle">Call us</h3>
+            <h3 class="contact__subtitle">Call us.</h3>
             <p class="contact__text">If you need urgent assistance, contact one of our friendly support staff to assist you.</p>
             <a href="tel:+44 (0)20 3871 2949" class="contact__link">+44 (0)20 3871 2949</a>
           </div>
