--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -5,11 +5,10 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./images/favicon/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay: Welcome</title>
     <meta name="description" content="Openpay Welcome to a smarter way to pay">
-    <meta property="og:image" content="http://www.myopenpay.co.uk/images/opengraph/opengraph-landingpage.jpg">
+    <meta property="og:image" content="https://www.myopenpay.co.uk/images/opengraph/opengraph-landingpage.jpg">
     <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
@@ -78,10 +77,10 @@
   <body>
     <div class="welcome-wrap block-wap">
       <div class="welcome block-child-wrap">
+        <img src="./images/logo-black.svg" alt="Openpay Logo" class="welcome-logo" />
         <h1 class="welcome-title">
-          Welcome to a<br>smarter way to pay
+          Welcome to a<br>smarter way to pay.
         </h1>
-        <img src="./images/landing_logo.svg" alt="Openpay Logo" class="welcome-logo" />
       </div>
     </div>
 
@@ -94,7 +93,7 @@
         </div>
         <div class="signup__item signup__item--form">
           <label class="signup__form-title" for="signup">
-            Add your email address to receive the latest news and info from Openpay
+            Add your email address to receive the latest news and info from Openpay.
           </label>
           <form
             class="gform signup__form"
@@ -136,7 +135,7 @@
               class="work-item__icon work-item__icon_1"
             />
             <h3 class="work-item__title">
-              Sign up
+              Sign up.
             </h3>
             <p class="work-item__desc">
               Sign up in less than 90 seconds with a few simple details.
@@ -149,7 +148,7 @@
               class="work-item__icon work-item__icon_2"
             />
             <h3 class="work-item__title">
-              Shop now
+              Shop now.
             </h3>
             <p class="work-item__desc">
               Add items to the basket, and select Openpay at checkout
@@ -162,7 +161,7 @@
               class="work-item__icon work-item__icon_3"
             />
             <h3 class="work-item__title">
-              Pay smarter
+              Pay smarter.
             </h3>
             <p class="work-item__desc">
               Pay your plan off in equal, monthly instalments, starting today.
@@ -176,7 +175,7 @@
       <div class="empoweringPay">
         <section class="empoweringPay-section">
           <h2 class="title-h2 empoweringPay-title">
-            Empowering you to pay
+            Empowering you to pay.
           </h2>
           <article class="empoweringPay__article">
             <h4 class="empoweringPay__article-title">
