--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,10 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./images/favicon/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay Welcome</title>
     <meta name="description" content="Openpay Welcome to a smarter way to pay">
-    <meta property="og:image" content="http://www.myopenpay.co.uk/images/opengraph/opengraph-home.jpg">
+    <meta property="og:image" content="https://www.myopenpay.co.uk/images/opengraph/opengraph-home.jpg">
     <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
@@ -102,7 +101,7 @@
     <div class="banner-wrap block-wap">
       <div class="banner block-child-wrap">
         <div class="banner-content">
-          <h1>Welcome to a<br>smarter way to pay</h1>
+          <h1>Welcome to a<br>smarter way to pay.</h1>
         </div>
       </div>
     </div>
@@ -111,7 +110,7 @@
       <section class="forWhomItWorks">
         <div class="forWhomItWorks_wrapper">
           <div class="forWhomItWorks_desc">
-            <h2>Get what you want,<br />pay on your own terms</h2>
+            <h2>Get what you want,<br />pay on your own terms.</h2>
             <p class="forWhomItWorks_subtitle">
               Working for Australian consumers and retailers since 2012, Openpay
               has now landed in the UK.
@@ -120,9 +119,9 @@
         </div>
         <div class="forWhomItWorks_wrapper">
           <div class="forWhomItWorks_img_bg">
-            <p class="forWhomItWorks_text">Equal monthly instalments</p>
-            <p class="forWhomItWorks_text">No hidden fees</p>
-            <p class="forWhomItWorks_text">No interest, ever</p>
+            <p class="forWhomItWorks_text">Equal monthly instalments.</p>
+            <p class="forWhomItWorks_text">No hidden fees.</p>
+            <p class="forWhomItWorks_text">No interest, ever.</p>
           </div>
         </div>
       </section>
@@ -135,21 +134,21 @@
           <div class="block_howItWorks_flex">
             <div class="block_howItWorks">
               <img src="images/cup.svg" alt="Cup Icon" />
-              <h3 class="block_howItWorks_title">Sign up</h3>
+              <h3 class="block_howItWorks_title">Sign up.</h3>
               <p class="block_howItWorks_text">
                 Sign up in less than 90 seconds with a few simple details.
               </p>
             </div> 
             <div class="block_howItWorks">
               <img src="images/sneakers.svg" alt="Sneakers Icon"/>
-              <h3 class="block_howItWorks_title">Shop now</h3>
+              <h3 class="block_howItWorks_title">Shop now.</h3>
               <p class="block_howItWorks_text">
                 With any of our trusted retailer partners online and in-store.
               </p>
             </div>
             <div class="block_howItWorks">
               <img src="images/airplane.svg" alt="Airplane Icon"/>
-              <h3 class="block_howItWorks_title">Pay smarter</h3>
+              <h3 class="block_howItWorks_title">Pay smarter.</h3>
               <p class="block_howItWorks_text">
                 Pay your plan off in equal, monthly instalments, starting today.
               </p>
@@ -162,7 +161,7 @@
     <div class="feedback-wrap block-wap">
       <section class="feedback block-child-wrap">
         <div class="feedback_item">
-          <h2 class="feedback_title">You’re a business? Let’s chat</h2>
+          <h2 class="feedback_title">You’re a business? Let’s chat.</h2>
           <p class="feedback_text feedback_text--height">
             We’re in the business of offering your customers a smarter way to
             pay. Do you need a risk-free and seamless payment solution that
@@ -174,7 +173,7 @@
         </div>
 
         <div class="feedback_item">
-          <h2 class="feedback_title">Shop smarter</h2>
+          <h2 class="feedback_title">Shop smarter.</h2>
           <div class="feedback__Interested">
             <label class="feedback_text feedback_text--signup" for="signup">
               Interested? Sign up below to learn more.
