--- a/src/business.html
+++ b/src/business.html
@@ -109,7 +109,7 @@
     </div>
 
     <div class="whyOpenPay-wrap block-wap">
-      <div class="whyOpenPay">
+      <div class="whyOpenPay block-child-wrap">
         <h2 class="whyOpenPay-title">
           Why Openpay?
         </h2>
