add contact page

--- a/src/business.html
+++ b/src/business.html
@@ -125,9 +125,8 @@
         </p>
       </div>
       <a
-        href="http://unbouncepages.com/openpaycontactuk/"
+        href="/get-in-touch"
         target="_blank"
-        rel="noopener"
         class="btn-primary whyOpenPay-btn"
       >
         Get in touch
@@ -246,9 +245,8 @@
           Ready to chat?
         </h3>
         <a
-          href="http://unbouncepages.com/openpaycontactuk/"
+          href="/get-in-touch"
           target="_blank"
-          rel="noopener"
           class="btn-primary readyToChat-btn"
         >
           Get in touch
