--- a/src/contact.html
+++ b/src/contact.html
@@ -122,7 +122,7 @@
             </div>
             <h3 class="contact__subtitle">Call us.</h3>
             <p class="contact__text">If you need urgent assistance, contact one of our friendly support staff to assist you.</p>
-            <a href="tel:+44 (0)20 3871 2949" class="contact__link">+44 (0)20 3871 2949</a>
+            <a href="tel:0800 193 0553" class="contact__link">0800 193 0553</a>
           </div>
         </div>
       </div>
