--- a/src/legal.html
+++ b/src/legal.html
@@ -148,6 +148,7 @@
         </div>
     </section>
 
+
     <div class="footer-wrap block-wap">
         <footer class="footer block-child-wrap">
             <nav class="nav-footer">
@@ -159,11 +160,7 @@
                         <a href="/contact" class="paragraphSpec-3">Contact us</a>
                     </li>
                     <li>
-                        <a href="./docs/privacy-policy.pdf" target="_blank" class="paragraphSpec-3">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <a href="./docs/terms-conditions.pdf" target="_blank" class="paragraphSpec-3">Terms &
-                            Conditions</a>
+                        <a href="./legal" target="_blank" class="paragraphSpec-3">Legal</a>
                     </li>
                 </ul>
             </nav>
