--- a/src/business.html
+++ b/src/business.html
@@ -1,300 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Openpay I’m a business</title>
-    <meta
-      name="description"
-      content="Openpay Welcome to a smarter way to pay"
-    />
-    <!-- Google Tag Manager -->
-    <script>
-      (function(w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-TF3JKHF');
-    </script>
 
-    <!-- 	FullStory Snippet -->
-    <script>
-      window['_fs_debug'] = false;
-      window['_fs_host'] = 'fullstory.com';
-      window['_fs_org'] = 'D6N17';
-      window['_fs_namespace'] = 'FS';
-      (function(m, n, e, t, l, o, g, y) {
-        if (e in m) {
-          if (m.console && m.console.log) {
-            m.console.log(
-              'FullStory namespace conflict. Please set window["_fs_namespace"].'
-            );
-          }
-          return;
+<head>
+  <meta charset="UTF-8" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Openpay I’m a business</title>
+  <meta name="description" content="Openpay Welcome to a smarter way to pay" />
+  <!-- Google Tag Manager -->
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TF3JKHF');
+  </script>
+
+  <!-- 	FullStory Snippet -->
+  <script>
+    window['_fs_debug'] = false;
+    window['_fs_host'] = 'fullstory.com';
+    window['_fs_org'] = 'D6N17';
+    window['_fs_namespace'] = 'FS';
+    (function (m, n, e, t, l, o, g, y) {
+      if (e in m) {
+        if (m.console && m.console.log) {
+          m.console.log(
+            'FullStory namespace conflict. Please set window["_fs_namespace"].'
+          );
         }
-        g = m[e] = function(a, b) {
-          g.q ? g.q.push([a, b]) : g._api(a, b);
-        };
-        g.q = [];
-        o = n.createElement(t);
-        o.async = 1;
-        o.src = 'https://' + _fs_host + '/s/fs.js';
-        y = n.getElementsByTagName(t)[0];
-        y.parentNode.insertBefore(o, y);
-        g.identify = function(i, v) {
-          g(l, { uid: i });
-          if (v) g(l, v);
-        };
-        g.setUserVars = function(v) {
-          g(l, v);
-        };
-        g.shutdown = function() {
-          g('rec', !1);
-        };
-        g.restart = function() {
-          g('rec', !0);
-        };
-        g.consent = function(a) {
-          g('consent', !arguments.length || a);
-        };
-        g.identifyAccount = function(i, v) {
-          o = 'account';
-          v = v || {};
-          v.acctId = i;
-          g(o, v);
-        };
-        g.clearUserCookie = function() {};
-      })(window, document, window['_fs_namespace'], 'script', 'user');
-    </script>
-    <link rel="stylesheet" href="./css/business_uk.css" />
-  </head>
-  <body>
-    <div class="header-wrap block-wap">
-      <header class="header block-child-wrap">
-        <div class="header-logo-and-trigger">
-          <a href="/" class="logo-link">
-            <img src="./images/logo-black.svg" alt="Openpay Logo" class="logo" />
-          </a>
-          <div class="trigger-menu">
-            <div class="trigger-menu__line"></div>
-          </div>
+        return;
+      }
+      g = m[e] = function (a, b) {
+        g.q ? g.q.push([a, b]) : g._api(a, b);
+      };
+      g.q = [];
+      o = n.createElement(t);
+      o.async = 1;
+      o.src = 'https://' + _fs_host + '/s/fs.js';
+      y = n.getElementsByTagName(t)[0];
+      y.parentNode.insertBefore(o, y);
+      g.identify = function (i, v) {
+        g(l, {
+          uid: i
+        });
+        if (v) g(l, v);
+      };
+      g.setUserVars = function (v) {
+        g(l, v);
+      };
+      g.shutdown = function () {
+        g('rec', !1);
+      };
+      g.restart = function () {
+        g('rec', !0);
+      };
+      g.consent = function (a) {
+        g('consent', !arguments.length || a);
+      };
+      g.identifyAccount = function (i, v) {
+        o = 'account';
+        v = v || {};
+        v.acctId = i;
+        g(o, v);
+      };
+      g.clearUserCookie = function () {};
+    })(window, document, window['_fs_namespace'], 'script', 'user');
+  </script>
+  <link rel="stylesheet" href="./css/business_uk.css" />
+</head>
+
+<body>
+  <div class="header-wrap block-wap">
+    <header class="header block-child-wrap">
+      <div class="header-logo-and-trigger">
+        <a href="/" class="logo-link">
+          <img src="./images/logo-black.svg" alt="Openpay Logo" class="logo" />
+        </a>
+        <div class="trigger-menu">
+          <div class="trigger-menu__line"></div>
         </div>
-        <nav class="header-nav header-nav_disable">
-          <ul class="nav-list">
-            <li>
-              <a href="/business" class="paragraphSpec-4">I'm a business</a>
-            </li>
-            <li>
-              <a href="/contact" class="paragraphSpec-4">Contact us</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-    </div>
-
-    <div class="introduction-wrap block-wap">
-      <div class="introduction block-child-wrap">
-        <h1 class="introduction-desc">
-          Open your eyes to a<br>smarter way to pay.
-        </h1>
       </div>
-    </div>
+      <nav class="header-nav header-nav_disable">
+        <ul class="nav-list">
+          <li>
+            <a href="/business" class="paragraphSpec-4">I'm a business</a>
+          </li>
+          <li>
+            <a href="/contact" class="paragraphSpec-4">Contact us</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </div>
 
-    <div class="whyOpenPay-wrap block-wap">
-      <div class="whyOpenPay block-child-wrap">
-        <h2 class="whyOpenPay-title">
-          Why Openpay?
-        </h2>
-        <p class="whyOpenPay__text">
-          We’re safe, responsible and transparent. Your customers are our
-          customers, and your success is our success.
-        </p>
-        <p class="whyOpenPay__text">
-          Made by retailers, for retailers, we have over 6000 online and
-          in-store partners across Australia, New Zealand and now the UK. Our
-          proven technology will help you increase sales, drive loyalty and
-          reduce product reprocessing.
+  <div class="introduction-wrap block-wap">
+    <div class="introduction block-child-wrap">
+      <h1 class="introduction-desc">
+        Open your eyes to a<br>smarter way to pay.
+      </h1>
+    </div>
+  </div>
+
+  <div class="whyOpenPay-wrap block-wap">
+    <div class="whyOpenPay block-child-wrap">
+      <h2 class="whyOpenPay-title">
+        Why Openpay?
+      </h2>
+      <p class="whyOpenPay__text">
+        We’re safe, responsible and transparent. Your customers are our
+        customers, and your success is our success.
+      </p>
+      <p class="whyOpenPay__text">
+        Made by retailers, for retailers, we have over 6000 online and
+        in-store partners across Australia, New Zealand and now the UK. Our
+        proven technology will help you increase sales, drive loyalty and
+        reduce product reprocessing.
+      </p>
+    </div>
+    <a href="/get-in-touch" target="_blank" class="btn-primary whyOpenPay-btn">
+      Get in touch
+    </a>
+  </div>
+
+  <div class="whatCanWeDo-wrap block-wap">
+    <section class="whatCanWeDo-section whatCanWeDo-section_1">
+      <h2 class="whatCanWeDo-title">
+        What can we do for you?
+      </h2>
+      <div class="whatCanWeDo-item">
+        <img src="./images/cart.svg" alt="basket" class="whatCanWeDo-item__icon" />
+        <h3 class="whatCanWeDo-item-title">
+          Increase basket size.
+        </h3>
+        <p class="whatCanWeDo-item-paragraph">
+          By offering your customers more time to pay, they’re able to spend
+          more and plan their purchases. Use Openpay to up-sell and increase
+          your AOV.
         </p>
       </div>
-      <a
-        href="/get-in-touch"
-        target="_blank"
-        class="btn-primary whyOpenPay-btn"
-      >
+      <div class="whatCanWeDo-item">
+        <img src="./images/incrise.svg" alt="schedule" class="whatCanWeDo-item__icon" />
+        <h3 class="whatCanWeDo-item-title">
+          Increase customer loyalty.
+        </h3>
+        <p class="whatCanWeDo-item-paragraph">
+          Convert existing customers and attract new ones by offering the
+          latest and greatest in consumer shopping trends. Allowing your
+          customers the ease and convenience of paying over time will keep
+          them coming back for more.
+        </p>
+      </div>
+      <div class="whatCanWeDo-item">
+        <img src="./images/lock.svg" alt="castle" class="whatCanWeDo-item__icon" />
+        <h3 class="whatCanWeDo-item-title">
+          Provide a risk free, secure solution.
+        </h3>
+        <p class="whatCanWeDo-item-paragraph">
+          We assume all transactional risk, paying you in full the next
+          business day. We mirror your return policies for partial and full
+          refunds and we return our Openpay transaction fee to you.
+        </p>
+      </div>
+    </section>
+    <section class="whatCanWeDo-section whatCanWeDo-section_2">
+      <h2 class="whatCanWeDo-title whatCanWeDo-title--row">
+        What can we do for your<br>customers?
+      </h2>
+      <div class="whatCanWeDo-item">
+        <img src="./images/shop.svg" alt="basket" class="whatCanWeDo-item__icon" />
+        <h3 class="whatCanWeDo-item-title">
+          A smarter way to pay.
+        </h3>
+        <p class="whatCanWeDo-item-paragraph">
+          We provide a simple way for your customers to spread their payments
+          and manage their finances responsibly without compromising on what
+          they want.
+        </p>
+      </div>
+      <div class="whatCanWeDo-item">
+        <img src="./images/group.svg" alt="community" class="whatCanWeDo-item__icon" />
+        <h3 class="whatCanWeDo-item-title">
+          Open & transparent transactions.
+        </h3>
+        <p class="whatCanWeDo-item-paragraph">
+          We are committed to providing your customers with clarity &
+          transparency at every stage of their journey. We won’t ever charge
+          them interest, payment or plan fees and everything is laid out
+          clearly from the beginning and throughout.
+        </p>
+      </div>
+      <div class="whatCanWeDo-item whatCanWeDo-item--last">
+        <img src="./images/confirm.svg" alt="handshake" class="whatCanWeDo-item__icon" />
+        <h3 class="whatCanWeDo-item-title">
+          Fulfilling orders, not fantasies.
+        </h3>
+        <p class="whatCanWeDo-item-paragraph">
+          Your customers always pay their first instalment at the time of
+          purchase, with payments due at dates chosen by them. Why is this
+          great? Your customers are able to truly budget, which means fewer
+          regret purchases.
+        </p>
+      </div>
+    </section>
+  </div>
+
+  <div class="readyToChat-wrap block-wap">
+    <div class="readyToChat block-child-wrap">
+      <h3 class="title-h3 readyToChat-title">
+        Ready to chat?
+      </h3>
+      <a href="/get-in-touch" target="_blank" class="btn-primary readyToChat-btn">
         Get in touch
       </a>
     </div>
+  </div>
 
-    <div class="whatCanWeDo-wrap block-wap">
-      <section class="whatCanWeDo-section whatCanWeDo-section_1">
-        <h2 class="whatCanWeDo-title">
-          What can we do for you?
-        </h2>
-        <div class="whatCanWeDo-item">
-          <img
-            src="./images/cart.svg"
-            alt="basket"
-            class="whatCanWeDo-item__icon"
-          />
-          <h3 class="whatCanWeDo-item-title">
-            Increase basket size.
-          </h3>
-          <p class="whatCanWeDo-item-paragraph">
-            By offering your customers more time to pay, they’re able to spend
-            more and plan their purchases. Use Openpay to up-sell and increase
-            your AOV.
-          </p>
-        </div>
-        <div class="whatCanWeDo-item">
-          <img
-            src="./images/incrise.svg"
-            alt="schedule"
-            class="whatCanWeDo-item__icon"
-          />
-          <h3 class="whatCanWeDo-item-title">
-            Increase customer loyalty.
-          </h3>
-          <p class="whatCanWeDo-item-paragraph">
-            Convert existing customers and attract new ones by offering the
-            latest and greatest in consumer shopping trends. Allowing your
-            customers the ease and convenience of paying over time will keep
-            them coming back for more.
-          </p>
-        </div>
-        <div class="whatCanWeDo-item">
-          <img
-            src="./images/lock.svg"
-            alt="castle"
-            class="whatCanWeDo-item__icon"
-          />
-          <h3 class="whatCanWeDo-item-title">
-            Provide a risk free, secure solution.
-          </h3>
-          <p class="whatCanWeDo-item-paragraph">
-            We assume all transactional risk, paying you in full the next
-            business day. We mirror your return policies for partial and full
-            refunds and we return our Openpay transaction fee to you.
-          </p>
-        </div>
-      </section>
-      <section class="whatCanWeDo-section whatCanWeDo-section_2">
-        <h2 class="whatCanWeDo-title whatCanWeDo-title--row">
-          What can we do for your<br>customers?
-        </h2>
-        <div class="whatCanWeDo-item">
-          <img
-            src="./images/shop.svg"
-            alt="basket"
-            class="whatCanWeDo-item__icon"
-          />
-          <h3 class="whatCanWeDo-item-title">
-            A smarter way to pay.
-          </h3>
-          <p class="whatCanWeDo-item-paragraph">
-            We provide a simple way for your customers to spread their payments
-            and manage their finances responsibly without compromising on what
-            they want.
-          </p>
-        </div>
-        <div class="whatCanWeDo-item">
-          <img
-            src="./images/group.svg"
-            alt="community"
-            class="whatCanWeDo-item__icon"
-          />
-          <h3 class="whatCanWeDo-item-title">
-            Open & transparent transactions.
-          </h3>
-          <p class="whatCanWeDo-item-paragraph">
-            We are committed to providing your customers with clarity &
-            transparency at every stage of their journey. We won’t ever charge
-            them interest, payment or plan fees and everything is laid out
-            clearly from the beginning and throughout.
-          </p>
-        </div>
-        <div class="whatCanWeDo-item whatCanWeDo-item--last">
-          <img
-            src="./images/confirm.svg"
-            alt="handshake"
-            class="whatCanWeDo-item__icon"
-          />
-          <h3 class="whatCanWeDo-item-title">
-            Fulfilling orders, not fantasies.
-          </h3>
-          <p class="whatCanWeDo-item-paragraph">
-            Your customers always pay their first instalment at the time of
-            purchase, with payments due at dates chosen by them. Why is this
-            great? Your customers are able to truly budget, which means fewer
-            regret purchases.
-          </p>
-        </div>
-      </section>
-    </div>
+  <div class="footer-wrap block-wap">
+    <footer class="footer block-child-wrap">
+      <nav class="nav-footer">
+        <ul class="footer-nav-list">
+          <li>
+            <a href="/business" class="paragraphSpec-3">I’m a business</a>
+          </li>
+          <li>
+            <a href="/contact" class="paragraphSpec-3">Contact us</a>
+          </li>
+          <li>
+            <a href="./legal" target="_blank" class="paragraphSpec-3">Legal</a>
+          </li>
+        </ul>
+      </nav>
+      <a href="/">
+        <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
+      </a>
+      <p class="copyright">
+        © Openpay | Made in Melbourne
+      </p>
+    </footer>
+  </div>
 
-    <div class="readyToChat-wrap block-wap">
-      <div class="readyToChat block-child-wrap">
-        <h3 class="title-h3 readyToChat-title">
-          Ready to chat?
-        </h3>
-        <a
-          href="/get-in-touch"
-          target="_blank"
-          class="btn-primary readyToChat-btn"
-        >
-          Get in touch
-        </a>
-      </div>
-    </div>
+  <div class="cookie-popup">
+    We uses cookies to give you the best browsing experience. <a href="./docs/privacy-policy.pdf"
+      class="cookie-popup__link" target="_blank">Find out more</a> or adjust your settings.
+    <button class="cookie-popup__button">Accept</button>
+  </div>
 
-    <div class="footer-wrap block-wap">
-      <footer class="footer block-child-wrap">
-        <nav class="nav-footer">
-          <ul class="footer-nav-list">
-            <li>
-              <a href="/business" class="paragraphSpec-3">I’m a business</a>
-            </li>
-            <li>
-              <a href="/contact" class="paragraphSpec-3">Contact us</a>
-            </li>
-            <li>
-              <a
-                href="./docs/privacy-policy.pdf"
-                target="_blank"
-                class="paragraphSpec-3"
-                >Privacy Policy</a
-              >
-            </li>
-            <li>
-              <a
-                href="./docs/terms-conditions.pdf"
-                target="_blank"
-                class="paragraphSpec-3"
-                >Terms & Conditions</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <a href="/">
-          <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
-        </a>
-        <p class="copyright">
-          © Openpay | Made in Melbourne
-        </p>
-      </footer>
-    </div>
-    <div class="cookie-popup">
-      We uses cookies to give you the best browsing experience.  <a href="./docs/privacy-policy.pdf" class="cookie-popup__link" target="_blank">Find out more</a> or adjust your settings.
-      <button class="cookie-popup__button">Accept</button>
-    </div>
+  <script defer src="./scripts/main.min.js"></script>
+</body>
 
-    <script defer src="./scripts/main.min.js"></script>
-  </body>
 </html>
