--- a/src/contact.html
+++ b/src/contact.html
@@ -137,6 +137,7 @@
     </div>
   </section>
 
+
   <div class="footer-wrap block-wap">
     <footer class="footer block-child-wrap">
       <nav class="nav-footer">
@@ -148,10 +149,7 @@
             <a href="/contact" class="paragraphSpec-3">Contact us</a>
           </li>
           <li>
-            <a href="./docs/privacy-policy.pdf" target="_blank" class="paragraphSpec-3">Privacy Policy</a>
-          </li>
-          <li>
-            <a href="./docs/terms-conditions.pdf" target="_blank" class="paragraphSpec-3">Terms & Conditions</a>
+            <a href="./legal" target="_blank" class="paragraphSpec-3">Legal</a>
           </li>
         </ul>
       </nav>
