update legal page

--- a/src/legal.html
+++ b/src/legal.html
@@ -110,41 +110,31 @@
         </div>
     </section>
 
-    <section>
-        <div class="content text-center">
-            <h3 class="title"> The Legal Stuff </h3>
-            <p>
+    <section class="content">
+        <div class="block-child-wrap">
+            <h2 class="content__title">The Legal Stuff</h2>
+            <p class="content__text">
                 Find all the important compliance information that governs our industry and more.
                 <br> Get familiar with it.
-                <a href="./contact"><b><u>Contact us</u></b></a> now if you have any questions.
+                <a class="content__contact-link" href="/contact">Contact us</a> now if you have any questions.
             </p>
-            <br>
-            <ul class="legal-list">
-                <li>
-                    <b>Privacy Policy</b>
-                    <br>
-                    <a href="./docs/Privacy Policy - 1 May 2019.pdf" target="_blank">
-                        Privacy Policy (PDF)
-                    </a>
-                    <br>
-                    <br>
-                </li>
-                <li>
-                    <b>Terms & Conditions</b>
-                    <br>
-                    <a href="./docs/Terms and Conditions - 1 May 2019" target="_blank">
-                        Terms & Conditions (PDF)
-                    </a>
-                    <br>
-                    <a href="./docs/Data Processors & Controllers - 1 May 2019" target="_blank">Data Processors &
-                        Controllers (PDF)</a>
-                    <br>
-                    <br>
-                </li>
-                <li>
-                    <b>Promotions</b>
-                </li>
-            </ul>
+            <div class="content__legal-list">
+                <div class="content__legal-item">
+                    <h3 class="legal__title">Privacy Policy</h3>
+                    <a href="./docs/privacy-policy.pdf" target="_blank" class="legal__link">Privacy Policy (PDF)</a>
+                </div>
+
+                <div class="content__legal-item">
+                    <h3 class="legal__title">Terms & Conditions</h3>
+                    <a href="./docs/terms-conditions.pdf" target="_blank" class="legal__link">Terms & Conditions (PDF)</a>
+                    <a href="./docs/data-processors.pdf" target="_blank" class="legal__link">Data Processors & Controllers (PDF)</a>
+                </div>
+
+                <div class="content__legal-item">
+                    <h3 class="legal__title">Promotions</h3>
+                </div>
+                
+            </div>
         </div>
     </section>
 
