change email on the contacts page

--- a/src/contact.html
+++ b/src/contact.html
@@ -121,7 +121,7 @@
           <h3 class="contact__subtitle contact__subtitle--mail">Email us.</h3>
           <p class="contact__text">For non-urgent and general help, contact us by email and we’ll get back to you
             promptly.</p>
-          <a href="mailto:sales@myopenpay.co.uk" class="contact__link">sales@myopenpay.co.uk</a>
+          <a href="mailto:support@myopenpay.co.uk" class="contact__link">support@myopenpay.co.uk</a>
         </div>
 
         <div class="contact__phone">
