--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -106,7 +106,7 @@
     </div>
 
     <section class="hero">
-        <div class="block-child-wrap">
+        <div class="block-child-wrap hero-text">
             <h1 class="hero__title">Get in touch.</h1>
             <p class="hero__subtitle">
                 One of our team will get back to you shortly.
