--- a/src/legal.html
+++ b/src/legal.html
@@ -93,7 +93,7 @@
         g.clearUserCookie = function() {};
       })(window, document, window['_fs_namespace'], 'script', 'user');
     </script>
-    <link rel="stylesheet" href="./css/gdpr.css" />
+    <link rel="stylesheet" href="./css/legal_uk.css" />
   </head>
 
   <body>
