added S3 flags for .css files

--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -78,7 +78,7 @@
             g.clearUserCookie = function () {}
         })(window, document, window['_fs_namespace'], 'script', 'user')
     </script>
-    <link rel="stylesheet" href="./css/get-in-touch_uk.css" />
+    <link rel="stylesheet" href="./css/get-in-touch_uk.css?20190516" />
 </head>
 
 <body>
