--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,6 @@
       f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-TF3JKHF');
   </script>
-
   <!-- 	FullStory Snippet -->
   <script>
     window['_fs_debug'] = false;
@@ -78,7 +77,7 @@
       g.clearUserCookie = function () {};
     })(window, document, window['_fs_namespace'], 'script', 'user');
   </script>
-  <link rel="stylesheet" href="./css/home_uk.css" />
+  <link rel="stylesheet" href="./css/home_uk.css?20190516" />
 </head>
 
 <body>
