updated css AWS flags

--- a/src/404.html
+++ b/src/404.html
@@ -48,7 +48,7 @@
     </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
     <link rel="stylesheet" href="./css/error.css" />
-    <link rel="stylesheet" href="css/nav.css?20190516?20190516">
+    <link rel="stylesheet" href="css/nav.css?20190517">
 </head>
 <body>
 <div class="topNav">
