updated data-processors pdf, fixed css

--- a/src/contact.html
+++ b/src/contact.html
@@ -171,8 +171,8 @@
           </div>
         </div>
         <div class="contact__text-media">
-          <b>For media enquiries please contact Brands2Life </b> 
-          <h4>
+          <h4>For media enquiries please contact Brands2Life </h4> 
+          <p>
             <a href="mailto: openpay@brands2life.com">
               <u> openpay@brands2life.com</u>
             </a>
@@ -180,7 +180,7 @@
             <a href="tel: +44 020 7592 1200">
               phone +44 (0)020 7592 1200.
             </a>
-          </h4>
+          </p>
         </div>
       </div>
     </section>
