--- a/src/contact.html
+++ b/src/contact.html
@@ -147,8 +147,8 @@
               For non-urgent and general help, contact us by email and we’ll get
               back to you promptly.
             </p>
-            <a href="mailto:sales@myopenpay.co.uk" class="contact__link"
-              >sales@myopenpay.co.uk</a
+            <a href="mailto:info@myopenpay.co.uk" class="contact__link"
+              >info@myopenpay.co.uk</a
             >
           </div>
 
@@ -165,8 +165,8 @@
               If you need urgent assistance, contact one of our friendly support
               staff to assist you.
             </p>
-            <a href="tel:+44 20 3871 2949" class="contact__link"
-              >+44 (0)20 3871 2949</a
+            <a href="tel:0800 193 0553" class="contact__link"
+              >0800 193 0553</a
             >
           </div>
         </div>
