minor copy fixes

--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
           <div class="forWhomItWorks_desc">
             <h2>Get what you want,<br />pay on your own terms.</h2>
             <p class="forWhomItWorks_subtitle">
-              Working for Australian consumers and retailers since 2012, Openpay
+              Working with Australian consumers and retailers since 2012, Openpay
               has now landed in the UK.
             </p>
             <div class="dress-container">
