add loading attribute to the images for the future lazy-loading browser support

--- a/src/business.html
+++ b/src/business.html
@@ -139,7 +139,7 @@
         What can we do for you?
       </h2>
       <div class="whatCanWeDo-item">
-        <img src="./images/cart.svg" alt="basket" class="whatCanWeDo-item__icon" />
+        <img src="./images/cart.svg" alt="basket" class="whatCanWeDo-item__icon" loading="lazy"/>
         <h3 class="whatCanWeDo-item-title">
           Increase basket size.
         </h3>
@@ -150,7 +150,7 @@
         </p>
       </div>
       <div class="whatCanWeDo-item">
-        <img src="./images/incrise.svg" alt="schedule" class="whatCanWeDo-item__icon" />
+        <img src="./images/incrise.svg" alt="schedule" class="whatCanWeDo-item__icon" loading="lazy"/>
         <h3 class="whatCanWeDo-item-title">
           Increase customer loyalty.
         </h3>
@@ -162,7 +162,7 @@
         </p>
       </div>
       <div class="whatCanWeDo-item">
-        <img src="./images/lock.svg" alt="castle" class="whatCanWeDo-item__icon" />
+        <img src="./images/lock.svg" alt="castle" class="whatCanWeDo-item__icon" loading="lazy"/>
         <h3 class="whatCanWeDo-item-title">
           Provide a risk free, secure solution.
         </h3>
@@ -178,7 +178,7 @@
         What can we do for your<br>customers?
       </h2>
       <div class="whatCanWeDo-item">
-        <img src="./images/shop.svg" alt="basket" class="whatCanWeDo-item__icon" />
+        <img src="./images/shop.svg" alt="basket" class="whatCanWeDo-item__icon" loading="lazy"/>
         <h3 class="whatCanWeDo-item-title">
           A smarter way to pay.
         </h3>
@@ -189,7 +189,7 @@
         </p>
       </div>
       <div class="whatCanWeDo-item">
-        <img src="./images/group.svg" alt="community" class="whatCanWeDo-item__icon" />
+        <img src="./images/group.svg" alt="community" class="whatCanWeDo-item__icon" loading="lazy"/>
         <h3 class="whatCanWeDo-item-title">
           Open & transparent transactions.
         </h3>
@@ -201,7 +201,7 @@
         </p>
       </div>
       <div class="whatCanWeDo-item whatCanWeDo-item--last">
-        <img src="./images/confirm.svg" alt="handshake" class="whatCanWeDo-item__icon" />
+        <img src="./images/confirm.svg" alt="handshake" class="whatCanWeDo-item__icon" loading="lazy"/>
         <h3 class="whatCanWeDo-item-title">
           Fulfilling orders, not fantasies.
         </h3>
@@ -242,7 +242,7 @@
         </ul>
       </nav>
       <a href="/">
-        <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
+        <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" loading="lazy"/>
       </a>
       <p class="copyright">
         © Openpay | Made in Melbourne
