--- a/src/contact.html
+++ b/src/contact.html
@@ -140,6 +140,7 @@
                 src="./images/contact/mail.svg"
                 alt="Email Icon"
                 class="contact__img contact__img--mail"
+                loading="lazy"
               />
             </div>
             <h3 class="contact__subtitle contact__subtitle--mail">Email us.</h3>
@@ -158,6 +159,7 @@
                 src="./images/contact/phone.svg"
                 alt="Phone Icon"
                 class="contact__img"
+                loading="lazy"
               />
             </div>
             <h3 class="contact__subtitle">Call us.</h3>
@@ -207,6 +209,7 @@
             src="./images/logo-footer.svg"
             alt="Openpay Logo"
             class="footer-logo"
+            loading="lazy"
           />
         </a>
         <p class="copyright">
