--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -133,6 +133,7 @@
               src="./images/Path%204496.svg"
               alt="sign in"
               class="work-item__icon work-item__icon_1"
+              loading="lazy"
             />
             <h3 class="work-item__title">
               Sign up.
@@ -146,6 +147,7 @@
               src="./images/Path%204497.svg"
               alt="shop"
               class="work-item__icon work-item__icon_2"
+              loading="lazy"
             />
             <h3 class="work-item__title">
               Shop now.
@@ -159,6 +161,7 @@
               src="./images/Group%201428.svg"
               alt="simple"
               class="work-item__icon work-item__icon_3"
+              loading="lazy"
             />
             <h3 class="work-item__title">
               Pay smarter.
