--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -220,7 +220,7 @@
                 </ul>
             </nav>
             <a href="/">
-                <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
+                <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" loading="lazy"/>
             </a>
             <p class="copyright">
                 © Openpay | Made in Melbourne
