--- a/src/legal.html
+++ b/src/legal.html
@@ -164,7 +164,7 @@
         </ul>
       </nav>
       <a href="/">
-        <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
+        <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" loading="lazy"/>
       </a>
       <p class="copyright">
         © Openpay | Made in Melbourne
