add alt attribute for the image on the home page

--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
               has now landed in the UK.
             </p>
             <div class="dress-container">
-              <img class="dress-img" src="./images/dress.svg" loading="lazy"/>
+              <img class="dress-img" src="./images/dress.svg" alt="dress" loading="lazy"/>
             </div>
           </div>
         </div>
