update hero images on the Legal and Contacts pages

--- a/src/legal.html
+++ b/src/legal.html
@@ -106,7 +106,7 @@
 
   <section class="hero">
     <div class="block-child-wrap">
-      <h1 class="hero__title">Legal Stuff</h1>
+      <h1 class="hero__title">Legal Stuff.</h1>
     </div>
   </section>
 
