WIP add How it works page and related links in header and footer

--- a/src/works.html
+++ b/src/works.html
@@ -20,14 +20,10 @@
       href="./images/favicon/favicon-16x16.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Openpay Welcome</title>
+    <title>Openpay How it works</title>
     <meta
       name="description"
       content="Openpay Welcome to a smarter way to pay"
-    />
-    <meta
-      property="og:image"
-      content="https://www.myopenpay.co.uk/images/opengraph/opengraph-home.jpg"
     />
     <!-- Google Tag Manager -->
     <script>
@@ -45,6 +41,7 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-TF3JKHF");
     </script>
+
     <!-- 	FullStory Snippet -->
     <script>
       window["_fs_debug"] = false;
@@ -96,7 +93,7 @@
         g.clearUserCookie = function() {};
       })(window, document, window["_fs_namespace"], "script", "user");
     </script>
-    <link rel="stylesheet" href="./css/home_uk.css?20190517" />
+    <link rel="stylesheet" href="./css/works_uk.css?20190517" />
   </head>
 
   <body>
@@ -117,7 +114,7 @@
         <nav class="header-nav header-nav_disable">
           <ul class="nav-list">
             <li>
-                <a href="/works" class="paragraphSpec-4">How it works</a>
+              <a href="/works" class="paragraphSpec-4">How it works</a>
             </li>
             <li>
               <a href="/business" class="paragraphSpec-4">I'm a business</a>
@@ -130,117 +127,132 @@
       </header>
     </div>
 
-    <div class="banner-wrap block-wap">
-      <div class="banner block-child-wrap">
-        <div class="banner-content">
-          <h1>Welcome to a<br />smarter way to pay.</h1>
-        </div>
-      </div>
-    </div>
-
-    <div class="forWhomItWorks-wrap">
-      <section class="forWhomItWorks">
-        <div class="forWhomItWorks_wrapper">
-          <div class="forWhomItWorks_desc">
-            <h2>Get what you want,<br />pay on your own terms.</h2>
-            <p class="forWhomItWorks_subtitle">
-              Working with Australian consumers and retailers since 2012, Openpay
-              has now landed in the UK.
-            </p>
-            <div class="dress-container">
-              <img class="dress-img" src="./images/dress.svg" alt="dress" loading="lazy"/>
-            </div>
-          </div>
-        </div>
-        <div class="forWhomItWorks_wrapper">
-          <div class="forWhomItWorks_img_bg">
-            <p class="forWhomItWorks_text">Equal monthly instalments.</p>
-            <p class="forWhomItWorks_text">No hidden fees.</p>
-            <p class="forWhomItWorks_text">No interest, ever.</p>
-          </div>
-        </div>
-      </section>
-    </div>
-
-    <div class="howItWorks block-wap">
+    <section class="hero">
       <div class="block-child-wrap">
-        <section class="howItWorks-content">
-          <h2 class="howItWorks-title">How Openpay works</h2>
-          <br>
-          <div class="block_howItWorks_flex">
-            <div class="block_howItWorks">
-              <img src="images/cup.svg" alt="Cup Icon" loading="lazy"/>
-              <h3 class="block_howItWorks_title">Sign up.</h3>
-              <p class="block_howItWorks_text">
-                Sign up in less than 90 seconds with a few<br>simple details.
-              </p>
-            </div>
-            <div class="block_howItWorks">
-              <img src="images/sneakers.svg" alt="Sneakers Icon" loading="lazy"/>
-              <h3 class="block_howItWorks_title">Shop now.</h3>
-              <p class="block_howItWorks_text">
-                With any of our trusted retailer partners online<br>and in-store.
-              </p>
-            </div>
-            <div class="block_howItWorks">
-              <img src="images/airplane.svg" alt="Airplane Icon" loading="lazy"/>
-              <h3 class="block_howItWorks_title">Pay smarter.</h3>
-              <p class="block_howItWorks_text">
-                Pay your plan off in equal, monthly instalments, starting today.
-              </p>
-            </div>
-          </div>
-        </section>
+        <h1 class="hero__title">Enjoy the smarter way to pay.</h1>
       </div>
-    </div>
+    </section>
 
-    <div class="feedback-wrap block-wap">
-      <section class="feedback block-child-wrap">
-        <div class="feedback_item">
-          <h2 class="feedback_title">You’re a business? Let’s chat.</h2>
-          <p class="feedback_text feedback_text--height">
-            We’re in the business of offering your customers a smarter way to
-            pay. Do you need a risk-free and seamless payment solution that
-            increases sales and conversions?
+    <section class="about">
+      <div class="block-child-wrap">
+        <p class="about__text">
+          Get greater flexibility when you shop online with our interest-free
+          monthly plans.
+        </p>
+        <p class="about__text">
+          Pay over two or three months with no hidden fees and no interest ever.
+        </p>
+      </div>
+    </section>
+
+    <section class="works">
+      <div class="block-child-wrap">
+        <h2 class="section-title works__title">How it works</h2>
+
+        <div class="works__item">
+          <div class="works__img-wrapper">
+            <img
+              src="./images/incrise.svg"
+              alt="Dress Icon"
+              class="works__img"
+              loading="lazy"
+            />
+          </div>
+          <h4 class="works__item-title">1. Shop online</h4>
+          <p class="works__item-descr">
+            Look for the Openpay logo on your favourite online websites. Choose
+            Openpay at the checkout.
           </p>
-          <div class="feedback_btn_block">
-            <a href="/business" class="feedback_btn_block_link">Learn more</a>
-          </div>
         </div>
 
-        <div class="feedback_item">
-          <h2 class="feedback_title">Shop smarter.</h2>
-          <div class="feedback__Interested">
-            <label class="feedback_text feedback_text--signup" for="signup">
-              Interested? Sign up below to learn more.
-            </label>
+        <div class="works__item">
+          <div class="works__img-wrapper">
+            <img
+              src="./images/incrise.svg"
+              alt="Phone Icon"
+              class="works__img"
+              loading="lazy"
+            />
           </div>
-          <form
-            class="gform feedback_form"
-            method="POST"
-            action="https://script.google.com/macros/s/AKfycbynpzfHhC7WiHKCTa9a4leLQKnJUgkkpWe-QMT1/exec"
-          >
-            <div class="form-elements">
-              <input
-                id="signup"
-                class="feedback_input"
-                type="email"
-                name="email"
-                placeholder="Your email address"
-                maxlength="254"
-                required
-              />
-              <button class="feedback_btn_block_link" type="submit">
-                Sign up
-              </button>
-            </div>
-            <div class="thankyou">
-              <h2><em>Thank you,</em> we'll be in touch.</h2>
-            </div>
-          </form>
+          <h4 class="works__item-title">2. Sign up</h4>
+          <p class="works__item-descr">
+            Get approved by Openpay in just 90 seconds with ID and a soft credit
+            check.
+          </p>
         </div>
-      </section>
-    </div>
+
+        <div class="works__item">
+          <div class="works__img-wrapper">
+            <img
+              src="./images/incrise.svg"
+              alt="Calendar Icon"
+              class="works__img"
+              loading="lazy"
+            />
+          </div>
+          <h4 class="works__item-title">3. Select your plan</h4>
+          <p class="works__item-descr">
+            Choose between a two or three month plan, and make your first
+            payment today. The remainder will be debited from your chosen card
+            in equal, monthly payments on the dates you choose. There’s no need
+            to wait, your order will be shipped right away.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="help">
+      <div class="block-child-wrap">
+        <div class="help__faq">
+          <h3 class="section-title help__title">
+            Pay on time and stay fee-free
+          </h3>
+          <p class="faq__descr">
+            The only fee we will ever charge is a late fee if you miss a
+            payment.
+          </p>
+          <p class="faq__descr">
+            Don’t worry, we’ll send you a notification to let you know when
+            every automatic payment is scheduled to process.
+          </p>
+          <p class="faq__descr">
+            See
+            <a href="#" class="faq__link" target="_blank" rel="noopener">FAQ</a>
+            for details
+          </p>
+        </div>
+
+        <div class="help__contacts">
+          <h3 class="section-title help__title">We’re here to help</h3>
+          <div class="help__img-wrapper">
+            <img
+              src="./images/incrise.svg"
+              alt="Service Icon"
+              class="help__img"
+              loading="lazy"
+            />
+          </div>
+          <p class="contacts__text">
+            <a href="mailto:info@myopenpay.co.uk" class="contacts__email"
+              >Email us</a
+            >, or give us a call on
+            <a href="tel:0800 193 0553" class="contacts__phone">0800 193 0553</a
+            >.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="readyToChat-wrap">
+      <div class="readyToChat block-child-wrap">
+        <h3 class="section-title readyToChat-title">
+          You're a Business? Let's chat.
+        </h3>
+        <a href="/get-in-touch" target="_blank" class="readyToChat-btn">
+          Get in touch
+        </a>
+      </div>
+    </section>
 
     <div class="footer-wrap block-wap">
       <footer class="footer block-child-wrap">
@@ -289,10 +301,5 @@
     </div>
 
     <script defer src="./scripts/main.min.js"></script>
-
-    <script
-      data-cfasync="false"
-      src="./scripts/form-submission-handler.min.js"
-    ></script>
   </body>
 </html>
