--- a/src/legal.html
+++ b/src/legal.html
@@ -94,6 +94,9 @@
       <nav class="header-nav header-nav_disable">
         <ul class="nav-list">
           <li>
+              <a href="/works" class="paragraphSpec-4">How it works</a>
+          </li>
+          <li>
             <a href="/business" class="paragraphSpec-4">I'm a business</a>
           </li>
           <li>
@@ -152,6 +155,9 @@
     <footer class="footer block-child-wrap">
       <nav class="nav-footer">
         <ul class="footer-nav-list">
+          <li>
+            <a href="/works" class="paragraphSpec-3">How it works</a>
+          </li>
           <li>
             <a href="/business" class="paragraphSpec-3">I’m a business</a>
           </li>
